# app/static/swagger.yaml
@@ -44,10 +44,13 @@ paths:
             properties:
               username:
                 type: "string"
+                description: "Username for the new user"
               email:
                 type: "string"
+                description: "Email address of the new user"
               password:
                 type: "string"
+                description: "Password for the new user"
       responses:
         201:
           description: "User created successfully"
@@ -73,8 +76,10 @@ paths:
             properties:
               email:
                 type: "string"
+                description: "Email address of the user"
               password:
                 type: "string"
+                description: "Password of the user"
       responses:
         200:
           description: "User logged in successfully"
@@ -126,6 +131,7 @@ paths:
       parameters:
         - in: "path"
           name: "product_id"
+          description: "ID of the product to retrieve"
           required: true
           type: "integer"
       security:
@@ -146,6 +152,7 @@ paths:
       parameters:
         - in: "path"
           name: "product_id"
+          description: "ID of the product to update"
           required: true
           type: "integer"
         - in: "body"
@@ -170,6 +177,7 @@ paths:
       parameters:
         - in: "path"
           name: "product_id"
+          description: "ID of the product to delete"
           required: true
           type: "integer"
       security:
@@ -207,7 +215,31 @@ paths:
           description: "Order details"
           required: true
           schema:
-            $ref: "#/definitions/Order"
+            type: "object"
+            required:
+              - total_price
+              - products
+            properties:
+              total_price:
+                type: "number"
+                format: "float"
+                description: "Total price of the order"
+              products:
+                type: "array"
+                description: "List of products in the order"
+                items:
+                  type: "object"
+                  required:
+                    - product_id
+                    - quantity
+                  properties:
+                    product_id:
+                      type: "integer"
+                      description: "ID of the product"
+                    quantity:
+                      type: "integer"
+                      minimum: 1
+                      description: "Quantity of the product ordered"
       security:
         - Bearer: []  # Require Bearer token for this endpoint
       responses:
@@ -225,6 +257,7 @@ paths:
       parameters:
         - in: "path"
           name: "order_id"
+          description: "ID of the order to retrieve"
           required: true
           type: "integer"
       security:
@@ -245,6 +278,7 @@ paths:
       parameters:
         - in: "path"
           name: "order_id"
+          description: "ID of the order to update"
           required: true
           type: "integer"
         - in: "body"
@@ -269,6 +303,7 @@ paths:
       parameters:
         - in: "path"
           name: "order_id"
+          description: "ID of the order to delete"
           required: true
           type: "integer"
       security:
@@ -288,34 +323,71 @@ definitions:
     properties:
       id:
         type: "integer"
+        description: "Unique identifier for the product"
       name:
         type: "string"
+        description: "Name of the product"
       description:
         type: "string"
+        description: "Detailed description of the product"
       price:
         type: "number"
         format: "float"
+        description: "Price of the product"
       stock:
         type: "integer"
+        description: "Number of items in stock"
       created_at:
         type: "string"
         format: "date-time"
+        description: "Timestamp when the product was added to the inventory"
 
   Order:
     type: "object"
     required:
-      - user_id
       - total_price
     properties:
       id:
         type: "integer"
+        description: "Unique identifier for the order"
       user_id:
         type: "integer"
+        description: "ID of the user who placed the order"
       total_price:
         type: "number"
         format: "float"
+        description: "Total price of the order"
       created_at:
         type: "string"
         format: "date-time"
+        description: "Timestamp when the order was placed"
       status:
         type: "string"
+        description: "Current status of the order (e.g., pending, completed)"
+      products:
+        type: "array"
+        description: "List of products in the order"
+        items:
+          $ref: "#/definitions/OrderProduct"
+
+  OrderProduct:
+    type: "object"
+    required:
+      - product_id
+      - quantity
+    properties:
+      order_id:
+        type: "integer"
+        description: "ID of the order"
+      product_id:
+        type: "integer"
+        description: "ID of the product"
+      quantity:
+        type: "integer"
+        description: "Quantity of the product ordered"
+      price_at_order:
+        type: "number"
+        format: "float"
+        description: "Price of the product at the time the order was placed"
+      product:
+        $ref: "#/definitions/Product"
